# micro_shop_FA

./: README.md  main.py  pyproject.toml
fastapi -application/core/: config.py
fastapi_application/: create_fastapi_app.py  main.py  run_main.py
fastapi_application/api/api_v1/: users.py
fastapi_application/core/: __init__.py  config.py  fs_broker.py  taskiq_broker.py
fastapi_application/core/gunicorn/: logger.py
fastapi_application/core/models/: __init__.py  base.py  db_helper.py
fastapi_application/crud/: users.py
fastapi_application/fs_subs/: app.py  users.py
fastapi_application/mailing/: send_email.py  send_welcome_email.py
fastapi_application/tasks/: __init__.py  welcom_email_notification.py
fastapi_application/utils/: __init__.py
fastapi_application/views/: __init__.py
fastapi_application/views/users/: views.py
